# niviz-rater

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: README.md  file_list  generate_images.sh  test-lorem.yaml
niviz_rater/: __init__.py  api.py  app.py  db.py  index.py  models.py  spec.py  utils.py  validation.py
niviz_rater/client/: package-lock.json  package.json  rollup.config.js
niviz_rater/client/public/: index.html
niviz_rater/client/src/: App.svelte  Entity.svelte  Grid.svelte  ItemRatingView.svelte  Modal.svelte  ModalEntityData.svelte  ModalStack.svelte  Pagination.svelte  QcTile.svelte  QcView.svelte  Row.svelte  Selector.svelte  Summary.svelte  db.js  store.js  utils.js
niviz_rater/client/src/utils/: app.js
niviz_rater/config/: db_defaults.py  utils.py
niviz_rater/data/: bids.json  db_defaults.cfg  fmriprep.yaml  hcp.yaml  schema.yaml  test.db
niviz_rater/db/: exceptions.py  models.py  queries.py  utils.py
niviz_rater/db/tests/: conftest.py  test_models.py  test_queries.py  test_utils.py
niviz_rater/tests/: test_config_component.py
