[metadata]
name = niviz_rater
description = Web dashboard for rating QC images
long_description = file:README.md
keywords = neuroimaging, visualization, automation, web, svelte
classifiers =
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
project_urls =
	GitHub = https://github.com/tigrlab/niviz_rater
	Bug TRACKER = https://github.com/tigrlab/niviz_rater/issues
	Source Code = https://github.com/tigrlab/niviz_rater

[options]
python_requires = >= 3.7
install_requires =
	attrs
	packaging
	bottle
	peewee
	PyYAML
	yamale
packages = find:
zip_safe = true

[options.extras_require]
# To use "pip install niviz_rater[name]"
doc =
	sphinx >= 3
	sphinx_rtd_theme >= 0.5.0
	sphinx-multiversion
	sphinx-autodoc-typehints
docs =
	%(doc)s
lint =
	flake8 >= 3.7.0
	yapf >= 0.30.0
test =
	pytest >= 6.2.4
all =
	%(doc)s
	%(lint)s
	%(test)s
buildtest =
	%(lint)s
	%(test)s
